# human_ros2

./: .gitignore  README.md
codroid_description/: CMakeLists.txt  README.md  package.xml  rviz_plugin_description.xml
codroid_description/docs/: 双臂控制接口.md
codroid_description/include/codroid_description/: arm_control_panel.hpp
codroid_description/launch/: display_arms.launch.py  display_gripper.launch.py  display_hand.launch.py  realtime_arms.launch.py  wave_demo.launch.py
codroid_description/meshes/hand/left/: index_force_sensor_1.STL.convex.stl  index_force_sensor_2.STL.convex.stl  left_base_link.STL.convex.stl  left_index_2.STL.convex.stl  left_middle_2.STL.convex.stl  left_ring_1.STL.convex.stl  little_force_sensor_3.STL.convex.stl  middle_force_sensor_3.STL.convex.stl  palm_force_sensor.STL.convex.stl  ring_force_sensor_1.STL.convex.stl  ring_force_sensor_3.STL.convex.stl  thumb_force_sensor_1.STL.convex.stl  thumb_force_sensor_3.STL.convex.stl  thumb_force_sensor_4.STL.convex.stl
codroid_description/meshes/hand/right/: middle_force_sensor_3.STL.convex.stl  right_index_1.STL.convex.stl  right_little_2.STL.convex.stl  right_ring_2.STL.convex.stl  right_thumb_1.STL.convex.stl  right_thumb_3.STL.convex.stl  ring_force_sensor_1.STL.convex.stl  ring_force_sensor_2.STL.convex.stl  ring_force_sensor_3.STL.convex.stl  thumb_force_sensor_2.STL.convex.stl  thumb_force_sensor_3.STL.convex.stl
codroid_description/rviz/: display_arms.rviz  display_gripper.rviz  display_hand.rviz
codroid_description/scripts/: codroid_arm_bridge.py  codroid_arm_trajectory.py  codroid_kinematics.py  codroid_wave_demo.py
codroid_description/src/: arm_control_panel.cpp
codroid_description/urdf/: arms_only.urdf  hand.urdf
gripper/: codroid_edu_mdh_aligned_gripper.urdf
gripper/meshes/hand/left/: index_force_sensor_3.STL.convex.stl  left_little_2.STL.convex.stl  left_thumb_1.STL.convex.stl  left_thumb_2.STL.convex.stl  left_thumb_3.STL.convex.stl  left_thumb_4.STL.convex.stl  little_force_sensor_1.STL.convex.stl  little_force_sensor_2.STL.convex.stl  middle_force_sensor_1.STL.convex.stl  middle_force_sensor_2.STL.convex.stl  ring_force_sensor_2.STL.convex.stl  thumb_force_sensor_2.STL.convex.stl
gripper/meshes/hand/right/: index_force_sensor_1.STL.convex.stl  index_force_sensor_2.STL.convex.stl  index_force_sensor_3.STL.convex.stl  little_force_sensor_1.STL.convex.stl  (+11 more)
hand/meshes/: link_head_yaw.STL
hand/meshes/gripper/: left_gripper_finger_link1.STL  left_gripper_finger_link1.mtl  left_gripper_finger_link2.STL  left_gripper_finger_link2.mtl  left_gripper_link.STL  left_gripper_link.mtl  left_realsense_link.STL  left_realsense_link.mtl  right_gripper_finger_link1.STL  right_gripper_finger_link1.mtl  right_gripper_finger_link2.STL  right_gripper_finger_link2.mtl  right_gripper_link.STL  right_gripper_link.mtl  right_realsense_link.STL  right_realsense_link.mtl
(+124 files in other folders)
